// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Button All Variants 1`] = `
.emotion-17 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-1 {
  min-height: 20px;
}

.emotion-16 {
  padding: 10px;
}

.emotion-0 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #29335C;
  font-weight: 600;
  border: none;
  background-color: #FEC340;
  border-radius: 50vh;
}

.emotion-0:hover:not(:disabled) {
  background-color: #F8B31B;
}

.emotion-0:focus {
  background-color: #F8B31B;
}

.emotion-0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-0:active {
  background-color: #F8B31B;
}

.emotion-3 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #29335C;
  font-weight: 600;
  border: none;
  background-color: #FEC340;
  border-radius: 50vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3:hover:not(:disabled) {
  background-color: #F8B31B;
}

.emotion-3:focus {
  background-color: #F8B31B;
}

.emotion-3:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-3:active {
  background-color: #F8B31B;
}

.emotion-2 {
  display: block;
  -webkit-transform: rotate(0.25turn);
  -ms-transform: rotate(0.25turn);
  transform: rotate(0.25turn);
  height: 1.25rem;
  width: 1.25rem;
  fill: #FEC340;
}

.emotion-6 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #29335C;
  font-weight: 600;
  border: none;
  background-color: #FEC340;
  border-radius: 50vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: align-left;
  -webkit-justify-content: align-left;
  -ms-flex-pack: align-left;
  justify-content: align-left;
}

.emotion-6:hover:not(:disabled) {
  background-color: #F8B31B;
}

.emotion-6:focus {
  background-color: #F8B31B;
}

.emotion-6:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-6:active {
  background-color: #F8B31B;
}

.emotion-8 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #FFFFFF;
  font-weight: 600;
  background-color: #924A8B;
  border-radius: 50vh;
}

.emotion-8:hover:not(:disabled) {
  background-color: #7A3E74;
}

.emotion-8:focus {
  background-color: #7A3E74;
}

.emotion-8:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-8:active {
  background-color: #7A3E74;
}

.emotion-11 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #FFFFFF;
  font-weight: 600;
  background-color: #924A8B;
  border-radius: 50vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-11:hover:not(:disabled) {
  background-color: #7A3E74;
}

.emotion-11:focus {
  background-color: #7A3E74;
}

.emotion-11:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-11:active {
  background-color: #7A3E74;
}

.emotion-14 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #FFFFFF;
  font-weight: 600;
  background-color: #924A8B;
  border-radius: 50vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: align-left;
  -webkit-justify-content: align-left;
  -ms-flex-pack: align-left;
  justify-content: align-left;
}

.emotion-14:hover:not(:disabled) {
  background-color: #7A3E74;
}

.emotion-14:focus {
  background-color: #7A3E74;
}

.emotion-14:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-14:active {
  background-color: #7A3E74;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-16"
  >
    <button
      className="emotion-0"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      primary button
    </button>
    <div
      className="emotion-1"
    />
    <button
      className="emotion-3"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      primary button
      <svg
        className="emotion-2"
        viewBox="0 0 120 120"
      >
        <path
          d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
        />
      </svg>
    </button>
    <div
      className="emotion-1"
    />
    <button
      className="emotion-6"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-2"
        viewBox="0 0 120 120"
      >
        <path
          d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
        />
      </svg>
      primary button
    </button>
    <div
      className="emotion-1"
    />
    <button
      className="emotion-8"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      secondary button
    </button>
    <div
      className="emotion-1"
    />
    <button
      className="emotion-11"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      secondary button
      <svg
        className="emotion-2"
        viewBox="0 0 120 120"
      >
        <path
          d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
        />
      </svg>
    </button>
    <div
      className="emotion-1"
    />
    <button
      className="emotion-14"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-2"
        viewBox="0 0 120 120"
      >
        <path
          d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
        />
      </svg>
      secondary button
    </button>
    <div
      className="emotion-1"
    />
  </div>
</div>
`;

exports[`Storyshots Elements|Button Primary Disabled Variant 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-0 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #29335C;
  font-weight: 600;
  border: none;
  background-color: #FEC340;
  border-radius: 50vh;
}

.emotion-0:hover:not(:disabled) {
  background-color: #F8B31B;
}

.emotion-0:focus {
  background-color: #F8B31B;
}

.emotion-0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-0:active {
  background-color: #F8B31B;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    disabled={true}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Primary Variant 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-0 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #29335C;
  font-weight: 600;
  border: none;
  background-color: #FEC340;
  border-radius: 50vh;
}

.emotion-0:hover:not(:disabled) {
  background-color: #F8B31B;
}

.emotion-0:focus {
  background-color: #F8B31B;
}

.emotion-0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-0:active {
  background-color: #F8B31B;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    disabled={false}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Secondary Disabled Variant 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-0 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #FFFFFF;
  font-weight: 600;
  background-color: #924A8B;
  border-radius: 50vh;
}

.emotion-0:hover:not(:disabled) {
  background-color: #7A3E74;
}

.emotion-0:focus {
  background-color: #7A3E74;
}

.emotion-0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-0:active {
  background-color: #7A3E74;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    disabled={true}
    type="submit"
  >
    Primary button
  </button>
</div>
`;

exports[`Storyshots Elements|Button Secondary Variant 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-0 {
  cursor: pointer;
  background-image: none;
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 18px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #FFFFFF;
  font-weight: 600;
  background-color: #924A8B;
  border-radius: 50vh;
}

.emotion-0:hover:not(:disabled) {
  background-color: #7A3E74;
}

.emotion-0:focus {
  background-color: #7A3E74;
}

.emotion-0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.emotion-0:active {
  background-color: #7A3E74;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    disabled={false}
    type="submit"
  >
    Primary button
  </button>
</div>
`;
